--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,94 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
+
+/*CheckBoxs*/
+@import url('./blocks/checkbox.css');
+html{
+  font-size: 16px;
+  --main-bg-color: #F3F7FA;
+  --filter-hover: #F1FCFF;
+  font-family: 'Open Sans', sans-serif;
+}
+
+
+
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+.page{
+  width: 60rem;
+  background-color: var(--main-bg-color);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.header{
+  padding: 3.125rem 0 3.125rem 0;
+}
+
+.header__logo{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 3.75rem;
+  height: 3.75rem;
+}
+
+.main{
+  display: flex;
+}
+
+.filter{
+  width: 14.5rem;
+  padding-top: 1.25rem;
+  padding-bottom: 0.625rem;
+  background-color: white;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.filter__title{
+  font-size: 0.75rem;
+  margin: 0 0 0.625rem 1.25rem ;
+}
+
+.filter__boxes{
+  border: none;
+  outline: none;
+  width: 14.5rem;
+  padding: 0;
+  margin: 0;
+}
+
+.filter__box{
+  padding: 0.625rem 1.25rem;
+  cursor: pointer;
+}
+
+.filter__box:hover{
+  background-color: var(--filter-hover);
+}
+
+.filter__checkbox{
+  margin: 0;
+  position: absolute;
+  left: -9999px;
+}
+
+.filter__checkbox-sign{
+  margin-left: 0.625rem;
+}
+
+
+p{
+  color: red;
+}
+
+
