--- a/src/blocks/checkbox.css
+++ b/src/blocks/checkbox.css
@@ -4,7 +4,6 @@ input[type="checkbox"]:not(:checked) + label
     display: inline-block;
     position: relative;
     padding-left: 30px;
-    line-height: 20px;
     cursor: pointer;
     margin: 0;
 }
@@ -17,6 +16,8 @@ input[type="checkbox"]:not(:checked) + label:before{
     top: 0px;
     width: 20px;
     height: 20px;
+    line-height: 20px;
+    box-sizing: border-box;
     border: 1px solid #2196F3;
     background-color: #ffffff;
 }
